# sirius-compass-backend

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  database.db  debug_projects.py  docker-compose.yml  pyproject.toml  todo.md
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 98dc5faa9bf9_add_owner_id_to_repository.py  b3d7afa09adb_init.py
app/: main.py  seed_db.py  test_github.py
app/adapters/github/: adapter.py
app/adapters/linear/: adapter.py
app/api/: schemas.py  server.py
app/core/: llm_factory.py  logger.py  streaming.py
app/core/agents/: analyst_graph.py  builder.py  chat_graph.py  nodes.py  state.py
app/core/database/: __init__.py  models.py  session.py
app/core/models/: __init__.py  domain.py
app/core/rag/: embeddings.py  vector_store.py
app/core/security/: auth.py  crypto.py
app/ports/: code_provider.py
app/services/: chat_storage.py  sync.py  sync_jobs.py  sync_orchestrator.py  sync_queue.py
app/tools/: db_reader.py  sync_manager.py
tests/: test_bootstrap.py
